# source-sherlockizer-service

./: .gitignore  README.md  _README.md  build_readme.sh  docker-compose.yml  init-fuseki-docker.sh
.github/workflows/: main.yml
apache/: Dockerfile  my-httpd.conf
apache/public_html/files/meiweb/: 62be9d1eb2ca949880727fbb3ddadc9239be0b2d_sherlockized.mei
pg/: create_tables.sql
sss/: Dockerfile  cache.py  main.py  mei_offsets.py  mei_sherlockizer.py  pyproject.toml  sherlock_xml.py  test.sh
